--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="btn_submit_pwd">
                         <button class="btn text-white text-center submit_btn_pwd text-center" type="button" (click)="resetPassword()"
-                            [disabled]="forgotPasswordForm.invalid || isDisable">Submit</button>
+                            [disabled]="forgotPasswordForm.invalid">Submit</button>
                     </div>
                 </form>
             </div>
