--- a/src/app/invitation-event/invitation-event.component.html
+++ b/src/app/invitation-event/invitation-event.component.html
@@ -124,7 +124,7 @@
                             </div>
                             <p>Auto Message</p>
                         </div>
-                        <div class="collect1_img" *ngIf="!isCelebrant"><!-- *ngIf="!isCelebrant" -->
+                        <div class="collect1_img" ><!-- *ngIf="!isCelebrant" -->
                             <div class="collect_img" (click)="selectBank(eventId)">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
