--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -115,7 +115,7 @@
                             </div>
                             <div class="save_and_pay_btn">
                                 <a class="update_btn text-center"
-                                    (click)="finalPayment(finalCartDetails,finalGrandTotal,donation,address)">Procced</a>
+                                    (click)="finalPayment(finalCartDetails,finalGrandTotal,donation)">Procced</a>
                                 <a class="paynow_btn text-center"
                                     (click)="nextSection('step_two', 'step_one')">Donation</a>
                             </div>
