--- a/src/app/thank-you-message/thank-you-message.component.html
+++ b/src/app/thank-you-message/thank-you-message.component.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="btn_submit_pwd">
                             <button class="btn text-white text-center add_bank_btn submit_btn_pwd text-center"
-                                (click)="thankyouMessage()" [disabled]="isDisable">Submit</button>
+                                (click)="thankyouMessage()">Submit</button>
                         </div>
                     </form>
                 </div>
