--- a/src/app/auto-message/auto-message.component.html
+++ b/src/app/auto-message/auto-message.component.html
@@ -130,7 +130,7 @@
                             </div>
                             <p class="text-white">Message</p>
                         </div>
-                        <div class="collect1_img" *ngIf="!isCelebrant"><!-- *ngIf="!isCelebrant" -->
+                        <div class="collect1_img" ><!-- *ngIf="!isCelebrant" -->
                             <div class="collect_img" (click)="selectBank(eventId)">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
