--- a/src/app/my-event/my-event.component.html
+++ b/src/app/my-event/my-event.component.html
@@ -6,8 +6,7 @@
 
 
 <!-- First slide -->
-<section class="d-flex flex-wrap align-content-center final_step" [ngClass]="getClassNameOfSection()"
-    style="display:none">
+<section class="d-flex flex-wrap align-content-center final_step" [ngClass]="getClassNameOfSection()">
     <div class="container-fluid">
         <h3 class="text-center">Aso Ebi</h3>
         <div [ngClass]="getClassNameOfDiv()">
@@ -59,7 +58,7 @@
                 <div id="dynamic_loader_content">
                     <div class="firstStep">
                         <div class="collected">
-                            <p>Total Collected: 624,000;00 (dote)</p>
+                            <p>Total Collected: 000,000;00 (dote)</p>
                             <p>Check my collections for more details</p>
                         </div>
                     </div>
