--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -1,205 +1,8 @@
-<!-- <div id="loading">
+<div id="loading" *ngIf="isLoad">
     <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
 </div>
-<section class="collection_slider_section d-flex flex-wrap align-content-center">
-    <div class="container-fluid">
-        <h3 class="text-center">Aso Ebi</h3>
-        <div class="collection-menu">
-            <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
-            </div>
-            <div class="inner_content_btn total_btn">
-                <a class="text-white float-left text-center">Total</a>
-                <a class="text-white float-right text-center">GuestList</a>
-            </div>
-            <h3 class="number text-white text-center">{{maleTotal+femaleTotal | currency:"&#x20A6;"}}</h3>
-            <div class="inner_box_content">
-                <div class="inner_title">
-                    <h3 class="text-white">{{money._id}} ({{money.totalPrice | currency:"&#x20A6;"}} )</h3>
-                </div>
-                <div class="collection_slider">
-
-                    <div class="coll_slide slide_one" *ngFor="let money of activitiesCollections; let k = index;">
-                        <div class="event_inner_content_box">
-                            <div class="event_inner_content">
-                                <div class="new_event_sec">
-                                    <div class="row">
-                                        <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                            <a><img src="/assets/images/coll_icon1.png">
-                                                <p class="text-white">Collections</p>
-                                            </a>
-                                        </div>
-                                        <div class="col-9 p-0">
-                                            <span class="text-white"> Hello{{userName}} </span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                                    <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
-                                </div>
-                                <div class="inner_content_btn total_btn">
-                                    <a class="text-white float-left text-center">Total</a>
-                                    <a class="text-white float-right text-center">GuestList</a>
-                                </div>
-                                <h3 class="number text-white text-center">
-                                    {{maleTotal+femaleTotal | currency:"&#x20A6;"}}
-                                </h3>
-                                <div class="inner_box_content">
-                                    <div class="inner_title">
-                                        <h3 class="text-white">{{money._id}}
-                                            ({{money.totalPrice | currency:"&#x20A6;"}} )
-                                        </h3>
-                                    </div>
-                                    <div>
-                                        <div class="event-activity-class">
-                                            <div class="row">
-                                                <div class="col-3" *ngFor="let group of money.group; let i = index;">
-                                                    <input type="radio" id="{{k}}{{i}}" name="radio-group"
-                                                        (change)="handleChange(group)">
-                                                    <label for="{{k}}{{i}}">{{group.groupName}}</label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="gender_list text-white">
-                                            <div class="row">
-                                                <div class="col-4">
-                                                    <p>Male</p>
-                                                </div>
-                                                <div class="col-8">
-                                                    <p> {{maleTotal | currency:"&#x20A6;"}}</p>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-4">
-                                                    <p>Female</p>
-                                                </div>
-                                                <div class="col-8">
-                                                    <p> {{femaleTotal | currency:"&#x20A6;"}}</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
 
-                    <div class="coll_slide slide_four">
-                        <div class="event_inner_content_box">
-                            <div class="event_inner_content">
-                                <div class="new_event_sec">
-                                    <div class="row">
-                                        <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                            <a><img src="/assets/images/coll_icon4.png">
-                                                <p class="text-white">Collections</p>
-                                            </a>
-                                        </div>
-                                        <div class="col-9 p-0">
-                                            <span class="text-white"> Hello {{userName}} </span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                                    <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
-                                </div>
-                                <div class="inner_content_btn total_btn">
-                                    <a (click)="totalCost('slide_four')"
-                                        class="text-white float-left text-center">Total</a>
-                                    <a class="text-white float-right text-center">GuestList</a>
-                                </div>
-                                <h3 class="number text-white text-center" *ngIf="totalCollection">
-                                    {{totalCollection.finalTotal | currency:"&#x20A6;"}}</h3>
-                                <div class="inner_box_content" *ngIf="totalCollection">
-                                    <div class="gender_list text-white">
-                                        <div class="row">
-                                            <div class="col-5">
-                                                <p>All activities</p>
-                                            </div>
-                                            <div class="col-7">
-                                                <p> {{totalCollection.totalCollection | currency:"&#x20A6;"}}</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-5">
-                                                <p>Gift donations</p>
-                                            </div>
-                                            <div class="col-7">
-                                                <p> {{totalCollection.totalDonation | currency:"&#x20A6;"}}</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="coll_slide slide_five">
-                        <div class="event_inner_content_box">
-                            <div class="event_inner_content">
-                                <div class="new_event_sec">
-                                    <div class="row">
-                                        <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                            <a><img src="/assets/images/coll_icon5.png">
-                                                <p class="text-white">Collections</p>
-                                            </a>
-                                        </div>
-                                        <div class="col-9 p-0">
-                                            <span class="text-white"> Hello {{userName}} </span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                                    <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
-                                </div>
-                                <div class="inner_content_btn total_btn">
-                                    <a (click)="totalCost('slide_four')"
-                                        class="text-white float-left text-center">Total</a>
-                                    <a class="text-white float-right text-center">GuestList</a>
-                                </div>
-                                <div class="inner_box_content inner-box-scroll">
-                                    <div class="five_border mt-3">
-                                        <div class="inner_title">
-                                            <h3 class="text-white"><span>TA</span> Tolani Aso Ebi</h3>
-                                        </div>
-                                        <div class="gender_list text-white" *ngFor="let list of allGuestList">
-                                            <div class="list1">
-                                                <p>{{list.firstName}} {{list.lastName}}
-                                                    {{list.totalCollection | currency:"&#x20A6;"}}</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div id="overlay" class="new_event_menu_box" style="display: none;">
-                
-                <div class="">
-                    <div class="event_menu">
-                        <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                            <ul>
-                                <li><a routerLink="/home" class="text-white new_event">Home</a></li>
-                                <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
-                                <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
-                                </li>
-                                <li><a routerLink="/bankDetails" class="text-white my_account">bank
-                                        account</a></li>
-                                <li><a routerLink="/reset-password" class="text-white my_account">Reset
-                                        Password</a></li>
-                                <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
 
 <section class="collection_slider_section d-flex flex-wrap align-content-center">
     <div class="container-fluid">
@@ -248,7 +51,7 @@
                                         </a>
                                     </div>
                                     <div class="col-9 p-0">
-                                        <span class="text-white"> Hello{{userName}} </span>
+                                        <span class="text-white"> Hello {{userName}} </span>
                                     </div>
                                 </div>
                             </div>
