--- a/src/app/my-event-details/my-event-details.component.html
+++ b/src/app/my-event-details/my-event-details.component.html
@@ -1,4 +1,4 @@
-<div id="loading">
+<div id="loading" *ngIf="isLoad">
     <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
 </div>
 
@@ -8,21 +8,21 @@
         <div class="container-fluid">
             <h3 class="text-center">Aso Ebi</h3>
             <div class="eventB_sec1">
-                <div class="overlay-parent-class">   
-                <div class="Join_inner_content_box">
-                    <div class="all_event_sec">
-                        <div class="row">
-                            <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                <a><img src="/assets/images/eventB_icon.png">
-                                    <p class="text-white">New Event</p>
-                                </a>
-                            </div>
-                            <div class="col-9 p-0">
-                                <span class="text-white all_event_name"> Hello {{userName}}</span>
+                <div class="overlay-parent-class">
+                    <div class="Join_inner_content_box">
+                        <div class="all_event_sec">
+                            <div class="row">
+                                <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                    <a><img src="/assets/images/eventB_icon.png">
+                                        <p class="text-white">New Event</p>
+                                    </a>
+                                </div>
+                                <div class="col-9 p-0">
+                                    <span class="text-white all_event_name"> Hello {{userName}}</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div id="overlay" class="new_event_menu_box" style="display: none;">
+                        <div id="overlay" class="new_event_menu_box" style="display: none;">
                             <div class="">
                                 <div class="event_menu">
                                     <div class="all_menu_content  d-flex flex-wrap align-content-center">
@@ -41,85 +41,84 @@
                                 </div>
                             </div>
                         </div>
-                    <div class="evet_sliding">
-                        <div class="event_slider2">
-                            <span *ngFor="let item of myEvent">
-                                <div class="slide1">
-                                    <div class="slider_box1 text-center m-2">
-                                        <button class="event_btn" title="{{item.eventTitle}}"
-                                            (click)="singleEventDeatils(item._id)">{{item.eventTitle}}</button>
+                        <div class="evet_sliding">
+                            <div class="event_slider2">
+                                <span *ngFor="let item of myEvent">
+                                    <div class="slide1">
+                                        <div class="slider_box1 text-center m-2">
+                                            <button class="event_btn" title="{{item.eventTitle}}"
+                                                (click)="singleEventDeatils(item._id)">{{item.eventTitle}}</button>
+                                        </div>
                                     </div>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="event_img text-center">
+                            <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                src="{{path}}{{singleEventDetails.profilePhoto}}" class="rounded-circle img-fluid">
+                        </div>
+                        <div class="collect_detail text-center">
+                            <!-- <span *ngFor="let item of activityName"> -->
+                            <div class="collect1_img" *ngFor="let item of activityName">
+                                <div class="collect_img" (click)="activityDetails(eventId,item._id)">
+                                    <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                        src="{{path}}{{singleEventDetails.profilePhoto}}">
                                 </div>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="event_img text-center">
-                        <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                            src="{{path}}{{singleEventDetails.profilePhoto}}" class="rounded-circle img-fluid">
-                    </div>
-                    <div class="collect_detail text-center">
-                        <!-- <span *ngFor="let item of activityName"> -->
-                        <div class="collect1_img" *ngFor="let item of activityName">
-                            <div class="collect_img" (click)="activityDetails(eventId,item._id)">
-                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                                <p class="text-white">{{item.activityName}}</p>
                             </div>
-                            <p class="text-white">{{item.activityName}}</p>
-                        </div>
-                        <!-- </span> -->
-                        <div class="collect1_img" (click)="totalCollection(eventId)"
-                        *ngIf="!isCelebrant">
-                            <div class="collect_img">
-                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                            <!-- </span> -->
+                            <div class="collect1_img" (click)="totalCollection(eventId)" *ngIf="isCelebrant">
+                                <div class="collect_img">
+                                    <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                        src="{{path}}{{singleEventDetails.profilePhoto}}">
+                                </div>
+                                <p class="text-center text-white">Collected</p>
                             </div>
-                            <p class="text-center text-white">Collected</p>
-                        </div>
-                        <div class="collect1_img" *ngIf="!isCelebrant" ><!-- *ngIf="eventId && !isCelebrant" -->
-                            <div class="collect_img" (click)="nextSection('seventhStep', 'initialStep')">
-                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                            <div class="collect1_img" *ngIf="isCelebrant">
+                                <div class="collect_img" (click)="nextSection('seventhStep', 'initialStep')">
+                                    <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                        src="{{path}}{{singleEventDetails.profilePhoto}}">
+                                </div>
+                                <p class="text-white">Edit Event</p>
                             </div>
-                            <p class="text-white">Edit Event</p>
-                        </div>
-                        <div class="collect1_img">
-                            <div class="collect_img" (click)="viewMoreDeatils(eventId)">
-                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                            <div class="collect1_img">
+                                <div class="collect_img" (click)="viewMoreDeatils(eventId)">
+                                    <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                        src="{{path}}{{singleEventDetails.profilePhoto}}">
+                                </div>
+                                <p class="text-white">View Event</p>
                             </div>
-                            <p class="text-white">View Event</p>
-                        </div>
 
-                        <div class="collect1_img" *ngIf="!isCelebrant"><!-- *ngIf="!isCelebrant" -->
-                            <div class="collect_img" (click)="messageEvent(eventId)">
-                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                            <div class="collect1_img" *ngIf="isCelebrant">
+                                <div class="collect_img" (click)="messageEvent(eventId)">
+                                    <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                        src="{{path}}{{singleEventDetails.profilePhoto}}">
+                                </div>
+                                <p class="text-white">Message</p>
                             </div>
-                            <p class="text-white">Message</p>
-                        </div>
-                        <div class="collect1_img" *ngIf="!isCelebrant"><!-- *ngIf="!isCelebrant" -->
-                            <div class="collect_img" (click)="invitation(eventId)">
-                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                            <div class="collect1_img" *ngIf="isCelebrant">
+                                <div class="collect_img" (click)="invitation(eventId)">
+                                    <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                        src="{{path}}{{singleEventDetails.profilePhoto}}">
+                                </div>
+                                <p class="text-white">Invited Guestes</p>
                             </div>
-                            <p class="text-white">Invited Guestes</p>
-                        </div>
-                        <div class="collect1_img" *ngIf="!isCelebrant"><!-- *ngIf="!isCelebrant" -->
-                            <div class="collect_img" (click)="autoMessage(eventId)">
-                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                            <div class="collect1_img" *ngIf="isCelebrant">
+                                <div class="collect_img" (click)="autoMessage(eventId)">
+                                    <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                        src="{{path}}{{singleEventDetails.profilePhoto}}">
+                                </div>
+                                <p class="text-white">Auto Message</p>
                             </div>
-                            <p class="text-white">Auto Message</p>
-                        </div>
-                        <div class="collect1_img" *ngIf="!isCelebrant"><!-- *ngIf="!isCelebrant" -->
-                            <div class="collect_img" (click)="selectBank(eventId)">
-                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
-                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                            <div class="collect1_img" *ngIf="isCelebrant">
+                                <div class="collect_img" (click)="selectBank(eventId)">
+                                    <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                        src="{{path}}{{singleEventDetails.profilePhoto}}">
+                                </div>
+                                <p class="text-white">Select Bank Account</p>
                             </div>
-                            <p class="text-white">Select Bank Account</p>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
@@ -177,12 +176,10 @@
                             </div>
                             <div class="edit_event_btn">
                                 <div class="row">
-                                    <div class="col-sm-6 col-xs-12 edit_info"
-                                        (click)="editEventDeatils(eventId)">
+                                    <div class="col-sm-6 col-xs-12 edit_info" (click)="editEventDeatils(eventId)">
                                         <a class="edit_btn text-white  text-center">Edit Information </a>
                                     </div>
-                                    <div class="col-sm-6 delete_info col-xs-12"
-                                        (click)="deleteEvent(eventId)">
+                                    <div class="col-sm-6 delete_info col-xs-12" (click)="deleteEvent(eventId)">
                                         <a class="delete_event_btn text-center">Delete Event</a>
                                     </div>
                                 </div>
