--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -9,17 +9,17 @@
         <div class="container-fluid">
             <h3 class="text-center text-center Aso_title">Aso Ebi</h3>
             <div class="profile_pic text-center text-center">
-                <img src="/assets/images/profile.png" class="rounded-circle">
+                <img *ngIf="eventDetails" src="{{path}}{{eventDetails.profilePhoto}}" class="rounded-circle">
             </div>
-            <h3 class="text-center text-center user_name"> hi</h3>
+            <h3 class="text-center text-center user_name" *ngIf="eventDetails"> {{eventDetails.hashTag}}</h3>
             <div class="card_inner_content_box5">
                 <div class="veiw_event">
                     <div class="event_inner_content">
                         <div class="event_detail_slider">
                             <div class="event_detail_slide event_detail_slide_sky1">
                                 <div class="events_name text-center">
-                                    <a href="#" class="text-center text-white" data-toggle="tooltip" data-placement="top" title="hi">
-                                        hi</a>
+                                    <a *ngIf="eventDetails" class="text-center text-white" data-toggle="tooltip" data-placement="top" title="{{eventDetails.eventType}}">
+                                        {{eventDetails.eventType}}</a>
                                 </div>
                             </div>
                             <div class="event_detail_slide event_detail_slide_sky1">
@@ -30,14 +30,14 @@
                             </div>
                             <div class="event_detail_slide event_detail_slide_sky1">
                                 <div class="events_name text-center">
-                                    <a href="#" class="text-center text-white" data-toggle="tooltip" data-placement="top" title="Total">Total</a>
+                                    <a class="text-center text-white" data-toggle="tooltip" data-placement="top" title="Total">Total</a>
                                 </div>
                             </div>
                         </div>
                         <div class="radio_btn text-white">
                             <p class="event_name_new"> ji</p>
                             <div class="event_prise_detail">
-                                <p class="gender_select">Male</p>rounded-circle
+                                <p class="gender_select">Male</p>
                                 <div class="row" *ngFor="let item of finalCartDetails">
                                     <div class="col-7">
                                         <div class="row">
@@ -134,33 +134,28 @@
         <div class="container-fluid">
             <h3 class="text-center text-white Aso_title">Aso Ebi</h3>
             <div class="profile_pic text-center text-center">
-                <img src="/assets/images/profile.png" class="rounded-circle">
+                <img *ngIf="eventDetails" src="{{path}}{{eventDetails.profilePhoto}}" class="rounded-circle">
             </div>
-            <h3 class="text-center text-white user_name"># Ayo Kunbi</h3>
+            <h3 class="text-center text-white user_name" *ngIf="eventDetails" >{{eventDetails.hashTag}}</h3>
             <div class="card_inner_content_box">
                 <div class="veiw_event">
                     <div class="event_inner_content">
                         <div class="event_detail_slider">
                             <div class="event_detail_slide event_detail_slide_pink1">
                                 <div class="events_name text-center">
-                                        <a href="#" class="text-center text-white" data-toggle="tooltip" data-placement="top" title="Engagement">Engagement</a>
+                                        <a  class="text-center text-white" *ngIf="eventDetails" data-toggle="tooltip" data-placement="top" title="{{eventDetails.eventType}}">{{eventDetails.eventType}}</a>
                                 </div>
                             </div>
                             <div class="event_detail_slide event_detail_slide_pink1">
                                 <div class="events_name text-center">
-                                        <a href="#" class="text-center text-white" data-toggle="tooltip" data-placement="top" title="Wedding">Wedding</a>
+                                        <a  class="text-center text-white" data-toggle="tooltip" data-placement="top" title="Gift Donation">Gift Donation</a>
                                 </div>
                             </div>
-                            <div class="event_detail_slide event_detail_slide_pink1">
+                            <!-- <div class="event_detail_slide event_detail_slide_pink1">
                                 <div class="events_name text-center">
-                                        <a href="#" class="text-center text-white" data-toggle="tooltip" data-placement="top" title="Gift Donation">Gift Donation</a>
+                                        <a  class="text-center text-white" data-toggle="tooltip" data-placement="top" title="Total">Total</a>
                                 </div>
-                            </div>
-                            <div class="event_detail_slide event_detail_slide_pink1">
-                                <div class="events_name text-center">
-                                        <a href="#" class="text-center text-white" data-toggle="tooltip" data-placement="top" title="Total">Total</a>
-                                </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="donation_detail">
                             <div class="row">
